# uploader

./: README.md  pyproject.toml
uploader/: main.py
uploader/static/templates/: index.html
